# SotafugyTypeR

./: .gitignore  Cargo.toml  README.md  bench_config.json  proxy_config.json  result.json
.kiro/steering/: command-execution.md  commnication.md  test-first.md
benches/: sip_benchmarks.rs
docs/: bench-auth-session-timer.md  performance-optimization.md  proxy-debug-logging.md  proxy-multi-socket-rport.md  proxy-parallel-recv.md  proxy-process-separation.md  sip-load-tester.md  sip-transaction-layer.md
proptest-regressions/orchestrator/: mod.txt
proptest-regressions/sip/: formatter.txt  parser.txt
proptest-regressions/uac/: mod.txt
scripts/: analyze_profile.py  bench.sh  bench_profile.sh  bench_profile_proxy.sh  bench_profile_proxy_v2.sh  bench_profile_sym.sh  resolve_profile.py
src/: cli.rs  error.rs  lib.rs  main.rs
src/auth/: mod.rs
src/benchmark/: mod.rs
src/config/: mod.rs
src/dialog/: mod.rs
src/orchestrator/: mod.rs
src/proxy/: config.rs  debug.rs  helpers.rs  location.rs  mod.rs
src/reporter/: mod.rs
src/sip/: formatter.rs  message.rs  mod.rs  parser.rs  pool.rs
src/stats/: mod.rs
src/testutil/: mod.rs
src/transaction/: helpers.rs  invite_client.rs  invite_server.rs  manager.rs  mod.rs  non_invite_client.rs  non_invite_server.rs  timer.rs
src/transport/: batch.rs  mod.rs
src/uac/: builders.rs  config.rs  load_pattern.rs  mod.rs
src/uas/: mod.rs
src/user_pool/: mod.rs
tests/: project_structure_test.rs  single_call_flow_test.rs
