[package]
name = "sip-load-test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sip-load-test"
path = "src/main.rs"

[[bin]]
name = "sip-proxy"
path = "src/bin/sip_proxy.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
nom = "7"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["float_roundtrip"] }
dashmap = "6"
thiserror = "2"
anyhow = "1"
md-5 = "0.10"
rand = "0.8"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"

[dev-dependencies]
proptest = "1"
tempfile = "3"
